--- a/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
@@ -59,7 +59,7 @@ _1k_HZ_ticks=y
 # ATTENTION - one of two predefined values should be selected!
 # 'stable' - stable releases (recommended)
 # 'unstable' - rc releases (active only temporarily)
-_bfq_rev='stable'
+_bfq_rev='unstable'
 
 ### Download linux-lucjan patchset
 # ATTENTION - one of four predefined values should be selected!
@@ -67,7 +67,7 @@ _bfq_rev='stable'
 # 'pending' - resync stable releases (active only temporarily)
 # 'testing' - rc releases (active only temporarily)
 # 'trunk' - pre-rc releases (active only temporarily)
-_linux_lucjan='actual'
+_linux_lucjan='testing'
 
 ### Do not edit below this line unless you know what you're doing
 
@@ -76,7 +76,7 @@ _pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-docs-headers')
 _major=5.5
 _srcname=linux-stable-rc
-pkgver=5.5.5.r7.g9080f3fbe456.ll30
+pkgver=5.5.5.r400.g84fa24740caa.ll31
 pkgrel=0
 pkgdesc='Linux LL'
 arch=('x86_64')
@@ -139,7 +139,7 @@ elif [ "$_linux_lucjan" = "testing" ]; then
 # _lucjanpath="https://raw.githubusercontent.com/sirlucjan/${_pkgbase}/master/testing"
  _lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/testing"
  _lucjanname='lucjan'
- _lucjanrev='ll19'
+ _lucjanrev='ll31'
  _lucjanrc='rc1'
  _lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}-${_lucjanrc}.patch"
 
@@ -156,7 +156,7 @@ fi
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#branch=linux-${_major}.y"
          # bfq-reverts
-         # "${_bfqrevpath}/${_bfqrevpatch}"{,.sig}
+        "${_bfqrevpath}/${_bfqrevpatch}"{,.sig}
          # linux-lucjan
         "${_lucjanpath}/${_lucjanpatch}"{,.sig}
          # the main kernel config files
@@ -450,7 +450,9 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '7c0d5801e4c8999930bab55d5384f63cb4f7c06fba6b2685f13152d70ecdc047b93d470965f686f9dd92c33470a2e0bfae2bbc3489ea690224efc980660f2c69'
+            'cafac86fa68cae1de3f7d4ba9f9803ae107dbae7f13f82f8fc8f554f84d5d57025a15e8529b533ef18b58a3407240e7954cebcb5b7f392726a906c32d00efaac'
+            'SKIP'
+            'e3f1f2631aa19e3146f4814771e821f4a1807451177c759f2a60f51877db15e7edf48fbc0e159f98f3a901655e3ff50c98ad30f70f665250ba4b04660bf71c9c'
             'SKIP'
             '6d32c90503af38b9350c3c9c0ddbbe5e92600b19062791c0622b7009404793f14c77dd32a92aa81c1075743b3775d0248291144878cf1863aff3dc23249804df')
 
