--- a/linux-lqx-rebranded/linux-lqx-tag/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag/PKGBUILD
@@ -46,7 +46,7 @@ pkgbase=linux-lqx-tag
 # pkgname=('linux-lqx-tag' 'linux-lqx-tag-headers' 'linux-lqx-tag-docs')
 _major=5.5
 _minor=5
-_lqx=lqx1
+_lqx=lqx2
 _srcname=linux-${_major}
 pkgver=${_major}.${_minor}.${_lqx}
 _pkgver=${_major}.${_minor}-${_lqx}
@@ -62,7 +62,7 @@ makedepends=('kmod' 'bc' 'libelf' 'python-sphinx' 'python-sphinx_rtd_theme'
 source=("https://cdn.kernel.org/pub/linux/kernel/v5.x/${_srcname}.tar.xz"
         "https://cdn.kernel.org/pub/linux/kernel/v5.x/${_srcname}.tar.sign"
         "https://github.com/zen-kernel/zen-kernel/releases/download/v${_pkgver}/v${_pkgver}.patch.xz"
-        #"https://github.com/zen-kernel/zen-kernel/releases/download/v${_pkgver}/v${_pkgver}.patch.xz.sig"
+        "https://github.com/zen-kernel/zen-kernel/releases/download/v${_pkgver}/v${_pkgver}.patch.xz.sig"
          # the main kernel config files
         'config')
 
@@ -308,7 +308,8 @@ done
 
 sha512sums=('fa74fdabb5e63384a39e54da05b86a9ae9ea16179524b041fbbdffc7177e80b53600ae98d76be127ba216148f9dc55fe07ab20637e22c6d6030cb4aa09eb2f86'
             'SKIP'
-            'd88319431de9dcac28e59dd0ac6f6a44403097edca3310597425936dbb2d959ec033d2f2c930ea26f5046f03cc93162066b9494461e435cedaf16109079557b8'
+            '8905c2925d68ce6aa08a3231d261148dff5e73190289f28dc79769dc6012125c8849fd107ad37be0d6cedfd9963d782a998c879a28b841f0f516c7c0156dcd82'
+            'SKIP'
             'e874fbca8e85651111053acceeb530440cf2637959158e9942cb0e73e0ae6eb9dc422e4ca186958fcc753034cda6a4769f94112aeadb3047c8759ad474dfd116')
 
 validpgpkeys=(
