--- a/linux-5.6rc/linux-bfq-git/PKGBUILD
+++ b/linux-5.6rc/linux-bfq-git/PKGBUILD
@@ -51,7 +51,7 @@ _major=5.6
 _major_rc=5.6-rc
 _srcname=linux
 pkgver=5.6.rc2.r312.g0c0ddd6ae47c
-pkgrel=1
+pkgrel=2
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
@@ -186,7 +186,8 @@ prepare() {
 build() {
   cd $_srcname
 
-  make bzImage modules htmldocs
+  make all
+  make htmldocs
 }
 
 _package() {
