FS#64279 Build htmldocs separately
Signed-off-by: Piotr Gorski <lucjan.lucjanov@gmail.com>

--- a/juliagoda-kernels/stable/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/stable/linux-juliagoda-git/PKGBUILD
@@ -77,7 +77,7 @@ _pkgbase=linux-lucjan
 _major=5.5
 _srcname=linux
 pkgver=5.5.4.r0.g3f29db9524f0.ll31
-pkgrel=2
+pkgrel=3
 pkgdesc='Linux LL'
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
@@ -304,7 +304,8 @@ prepare() {
 build() {
   cd $_srcname
 
-  make bzImage modules htmldocs
+  make all
+  make htmldocs
 }
 
 _package-kernel() {
