--- a/dots/boot/syslinux.cfg
+++ b/dots/boot/syslinux.cfg
@@ -76,24 +76,25 @@ LABEL arch_linux_fallback
     APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo
 
 LABEL arch_linux_lucjan
-    MENU LABEL Arch Linux BFQ SQ MQ Haswell 
+    MENU LABEL Arch Linux LL 
     LINUX ../vmlinuz-linux-lucjan
     INITRD ../intel-ucode.img,../initramfs-linux-lucjan.img
     APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo
     
 LABEL arch_linux_lucjan_fallback
-    MENU LABEL Arch Linux BFQ SQ MQ Haswell Fallback
+    MENU LABEL Arch Linux LL Fallback
     LINUX ../vmlinuz-linux-lucjan
     INITRD ../intel-ucode.img,../initramfs-linux-lucjan-fallback.img
     APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo 
 
 LABEL arch_linux_lucjan_git
-    MENU LABEL Arch Linux BFQ SQ MQ Haswell Git 
+    MENU LABEL Arch Linux LL Git 
     LINUX ../vmlinuz-linux-lucjan-git
     INITRD ../intel-ucode.img,../initramfs-linux-lucjan-git.img
     APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo
-LABEL arch_linux_bfq_sq-mq_haswell_git_fallback
-    MENU LABEL Arch Linux BFQ SQ MQ Haswell Git Fallback
+
+LABEL arch_linux_lucjan_git_fallback
+    MENU LABEL Arch Linux LL Git Fallback
     LINUX ../vmlinuz-linux-lucjan-git
     INITRD ../intel-ucode.img,../initramfs-linux-lucjan-git-fallback.img
     APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo
