--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,11 +45,11 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.5
-_minor=5
-_lqx=lqx2
+_minor=7
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.5.5.lqx2.r0.g44c3825b9fd1
-pkgrel=2
+pkgver=5.5.7.lqx1.r0.g804df6c0c9ee
+pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
