--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.5
-_minor=7
+_minor=8
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.5.7.lqx1.r0.g804df6c0c9ee
+pkgver=5.5.8.lqx1.r0.g0ac4f211c12a
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
