--- a/linux-5.6rc/linux-aufs/PKGBUILD
+++ b/linux-5.6rc/linux-aufs/PKGBUILD
@@ -50,10 +50,10 @@ pkgbase=linux-aufs
 _major=5.6
 _major_rc=5.6-rc
 _minor=rc4
-_tag=v5.6-${_minor}
+_tag=v${_major}-${_minor}
 pkgver=${_major}${_minor}
 _srcname=linux
-pkgrel=3
+pkgrel=4
 pkgdesc='Linux AUFS'
 arch=('x86_64')
 url="https://github.com/sfjro/aufs5-standalone"
@@ -69,7 +69,7 @@ _aufs_patch="0001-aufs-${_aufs_ver}.patch"
 _gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v5.5+.patch"
 
-source=("git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git#tag=$_tag"
+source=("git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git#tag=${_tag}"
         "${_lucjanpath}/${_aufs_path}/${_aufs_patch}"
         "${_gcc_path}/${_gcc_patch}"
         "${_lucjanpath}/arch-patches/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
