--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.5
-_minor=9
+_minor=10
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.5.9.lqx1.r0.g8140c51a99a0
+pkgver=5.5.10.lqx1.r0.g520ca4e323a5
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -306,4 +306,4 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            'e874fbca8e85651111053acceeb530440cf2637959158e9942cb0e73e0ae6eb9dc422e4ca186958fcc753034cda6a4769f94112aeadb3047c8759ad474dfd116')
+            '449151f8046cac2faf58868fcdcd634201307a9eb56cd20415ea57bd4b235a90afd788ecd0241f0311556e58d251b79bf40c49376e2176bf15285ab29c4f7071')
