--- a/linux-5.6rc/linux-bfq-git/PKGBUILD
+++ b/linux-5.6rc/linux-bfq-git/PKGBUILD
@@ -50,7 +50,7 @@ pkgbase=linux-bfq-git
 _major=5.6
 _major_rc=5.6-rc
 _srcname=linux
-pkgver=5.6.rc6.r9.gac309e7744be
+pkgver=5.6.rc6.r11.g5076190daded
 pkgrel=1
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
@@ -68,7 +68,7 @@ _bfq_rev_path="bfq-reverts-all-v2"
 _bfq_rev_patch="0001-bfq-reverts.patch"
 _bfq_path="bfq-dev-lucjan"
 _bfq_ver="v11"
-_bfq_rel="r2K200318"
+_bfq_rel="r2K200319"
 _bfq_patch="${_major}-${_bfq_path}-${_bfq_ver}-${_bfq_rel}.patch"
 _gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v5.5+.patch"
@@ -334,7 +334,7 @@ done
 
 sha512sums=('SKIP'
             '716c9f5536d346ee46ac997aa7a8224bea7b9afe490dce8a275868ef796f1ac98f880ce37464e397dcea24db510178014e756fe66ab3c80672c47f95db24d294'
-            '8911c77ae4dcaba7133b77a6cc583aced1510a700a01132a0c74be10fc7a7c97aa168463c0c0e10276365c6cfefc41dc23c3793930bce51db04aea46010e26c4'
+            'ee3c4629bf2fe7176dd4e4f4c6537a4ed8522258f7a275ce47c5c36a03a3448dccc4fdf3a484dc5e72ca5280f9ea20ccc03cd9de61f9e0fed9fdd185f5031292'
             '52b14ef834769d2b4567e756a4485995acd2e3f5b989cbb53f9b113b42ff67b736bbcb284b95fe15c9efb846fd12320a26a131e4ce9af50b521114d274b472f1'
             '2ff3827235189dd2217b1b7dee31925e9a75e053f85b08ea1c544d608d632bc4e5b5fbd90d3e154998662bf89137bc854afa257e10ba2726ee3eea8e8e6a0b4b'
             'b3162a3ba7d87d6f98148af708826adb4731f540dbeb5e8653aba92b53bb2aad8e189d3f4e62a97fff214b8a84ad364d09a830e28a05ad3e980903c34cf5a774')
