--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.5
-_minor=10
-_lqx=lqx2
+_minor=11
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.5.10.lqx2.r0.g030a773aaa04
+pkgver=5.5.11.lqx1.r0.g26bb68395b25
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
