--- a/linux-5.6rc/linux-bfq-git/PKGBUILD
+++ b/linux-5.6rc/linux-bfq-git/PKGBUILD
@@ -50,7 +50,7 @@ pkgbase=linux-bfq-git
 _major=5.6
 _major_rc=5.6-rc
 _srcname=linux
-pkgver=5.6.rc6.r33.g6c90b86a745a
+pkgver=5.6.rc7.r0.g16fbf79b0f83
 pkgrel=1
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
@@ -68,7 +68,7 @@ _bfq_rev_path="bfq-reverts-all-v2"
 _bfq_rev_patch="0001-bfq-reverts.patch"
 _bfq_path="bfq-dev-lucjan"
 _bfq_ver="v11"
-_bfq_rel="r2K200320"
+_bfq_rel="r2K200323"
 _bfq_patch="${_major}-${_bfq_path}-${_bfq_ver}-${_bfq_rel}.patch"
 _gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v5.5+.patch"
@@ -334,7 +334,7 @@ done
 
 sha512sums=('SKIP'
             '716c9f5536d346ee46ac997aa7a8224bea7b9afe490dce8a275868ef796f1ac98f880ce37464e397dcea24db510178014e756fe66ab3c80672c47f95db24d294'
-            '1c67d41a39c6ddf410a21d7a2abb310ad63a32559b8ff3cb1599a5a3f0d49960dcfb44f528d463d08d2e04ba348f434bd3c69a5be3af047e0b770d2c3dd1660a'
+            '1b7b4d8a66bc11c579b356477744828bcb4e671426f614f20e0a50a396a21b5a47137f9f2b0ba33b6c7472ac1b296676045ab40669206080ac53f0129cbf1f0e'
             '52b14ef834769d2b4567e756a4485995acd2e3f5b989cbb53f9b113b42ff67b736bbcb284b95fe15c9efb846fd12320a26a131e4ce9af50b521114d274b472f1'
             '2ff3827235189dd2217b1b7dee31925e9a75e053f85b08ea1c544d608d632bc4e5b5fbd90d3e154998662bf89137bc854afa257e10ba2726ee3eea8e8e6a0b4b'
             'b3162a3ba7d87d6f98148af708826adb4731f540dbeb5e8653aba92b53bb2aad8e189d3f4e62a97fff214b8a84ad364d09a830e28a05ad3e980903c34cf5a774')
