--- a/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
@@ -59,7 +59,7 @@ _1k_HZ_ticks=y
 # ATTENTION - one of two predefined values should be selected!
 # 'stable' - stable releases (recommended)
 # 'unstable' - rc releases (active only temporarily)
-_bfq_rev='unstable'
+_bfq_rev='stable'
 
 ### Download linux-lucjan patchset
 # ATTENTION - one of four predefined values should be selected!
@@ -76,8 +76,8 @@ _pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-docs-headers')
 _major=5.5
 _srcname=linux-stable-rc
-pkgver=5.5.9.r310.g8b841eb697e17.ll50
-pkgrel=0
+pkgver=5.5.9.r327.g738ff80e1bc68.ll50
+pkgrel=0.1
 pkgdesc='Linux LL'
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
@@ -451,7 +451,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '29490f6033d88bcf9dd64ddcad291c4632c9cbea58dc2571c6f6828d331a7c804ee6f21b0b889d7b2a997b1d829c34eb434fb0bb6cf7a9dc81520fd5cea2903a'
+            '7380a402f9c5cd80d2f99d12022a7ed92a47abf9e6c2fe40c0ef7423e6cbb2b457608866d976ab39caa10e62fb9188c689c7a48fbf28794f1865ec232380d474'
             'SKIP'
             'b37ace903da6607a3ff4e7e6eef6add45be2a80ae756c7290317b2e235cc310b536372189ff3ad260b2db6d4ea7094640c739a708811668c92cdc9dc33b6fd04'
             'SKIP'
