--- a/linux-5.6rc/linux-bfq-git/PKGBUILD
+++ b/linux-5.6rc/linux-bfq-git/PKGBUILD
@@ -50,7 +50,7 @@ pkgbase=linux-bfq-git
 _major=5.6
 _major_rc=5.6-rc
 _srcname=linux
-pkgver=5.6.rc7.r2.g979e52ca0469
+pkgver=5.6.rc7.r227.gf3e69428b5e2
 pkgrel=1
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
@@ -68,7 +68,7 @@ _bfq_rev_path="bfq-reverts-all-v2"
 _bfq_rev_patch="0001-bfq-reverts.patch"
 _bfq_path="bfq-dev-lucjan"
 _bfq_ver="v11"
-_bfq_rel="r2K200324"
+_bfq_rel="r2K200327"
 _bfq_patch="${_major}-${_bfq_path}-${_bfq_ver}-${_bfq_rel}.patch"
 _gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v5.5+.patch"
@@ -334,7 +334,7 @@ done
 
 sha512sums=('SKIP'
             '716c9f5536d346ee46ac997aa7a8224bea7b9afe490dce8a275868ef796f1ac98f880ce37464e397dcea24db510178014e756fe66ab3c80672c47f95db24d294'
-            '8da4754c2fc1e3cbfa8617fa28c460f7f0f877d0c9e07535a125093a1147dd527cc6d51fa4d023a4ffa956da0d31130c9c187994f56ca98a2a4dd23a8430bb10'
+            '97b0fc2f3f61c3c7f76b83b66dbfb340576e3c5dd5461916340bad64236f431ffe7fb9a97840d34fca6773499bdb79393aa189a079985cda9153b222bafc451b'
             '52b14ef834769d2b4567e756a4485995acd2e3f5b989cbb53f9b113b42ff67b736bbcb284b95fe15c9efb846fd12320a26a131e4ce9af50b521114d274b472f1'
             '2ff3827235189dd2217b1b7dee31925e9a75e053f85b08ea1c544d608d632bc4e5b5fbd90d3e154998662bf89137bc854afa257e10ba2726ee3eea8e8e6a0b4b'
             'b3162a3ba7d87d6f98148af708826adb4731f540dbeb5e8653aba92b53bb2aad8e189d3f4e62a97fff214b8a84ad364d09a830e28a05ad3e980903c34cf5a774')
