--- a/linux-5.6rc/linux-aufs/PKGBUILD
+++ b/linux-5.6rc/linux-aufs/PKGBUILD
@@ -49,11 +49,13 @@ pkgbase=linux-aufs
 # pkgname=('linux-aufs' 'linux-aufs-headers' 'linux-aufs-docs')
 _major=5.6
 _major_rc=5.6-rc
-_minor=rc7
-_tag=v${_major}-${_minor}
-pkgver=${_major}${_minor}
+#_minor=rc7
+#_tag=v${_major}-${_minor}
+#pkgver=${_major}${_minor}
+_tag=v${_major}
+pkgver=${_major}
 _srcname=linux
-pkgrel=2
+pkgrel=1
 pkgdesc='Linux AUFS'
 arch=('x86_64')
 url="https://github.com/sfjro/aufs5-standalone"
