--- a/linux-5.6rc/linux-bfq/PKGBUILD
+++ b/linux-5.6rc/linux-bfq/PKGBUILD
@@ -49,11 +49,13 @@ pkgbase=linux-bfq
 # pkgname=('linux-bfq' 'linux-bfq-headers' 'linux-bfq-docs')
 _major=5.6
 _major_rc=5.6-rc
-_minor=rc7
-_tag=v${_major}-${_minor}
-pkgver=${_major}${_minor}
+#_minor=rc7
+#_tag=v${_major}-${_minor}
+#pkgver=${_major}${_minor}
+_tag=v${_major}
+pkgver=${_major}
 _srcname=linux
-pkgrel=7
+pkgrel=1
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
