--- a/linux-5.6rc/linux-aufs-git/PKGBUILD
+++ b/linux-5.6rc/linux-aufs-git/PKGBUILD
@@ -48,9 +48,9 @@ _1k_HZ_ticks=
 pkgbase=linux-aufs-git
 # pkgname=('linux-aufs-git' 'linux-aufs-git-headers' 'linux-aufs-git-docs')
 _major=5.6
-_major_rc=5.6-rc
+#_major_rc=5.6-rc
 _srcname=linux
-pkgver=5.6.rc7.r334.g570203ec830d
+pkgver=5.6.r0.g7111951b8d49
 pkgrel=1
 pkgdesc='Linux AUFS'
 arch=('x86_64')
@@ -59,8 +59,8 @@ license=('GPL2')
 options=('!strip')
 makedepends=('kmod' 'bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme'
              'graphviz' 'imagemagick')
-#_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major_rc}"
-_lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major_rc}"
+#_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
+_lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 _aufs_path="aufs-patches"
 _aufs_ver="20200302"
 _aufs_patch="0001-aufs-${_aufs_ver}.patch"
@@ -70,7 +70,7 @@ _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v5.5+.patch
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git"
         "${_lucjanpath}/${_aufs_path}/${_aufs_patch}"
         "${_gcc_path}/${_gcc_patch}"
-        "${_lucjanpath}/arch-patches/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+        "${_lucjanpath}/arch-patches-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
          # the main kernel config files
         'config')
 
@@ -326,7 +326,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            'f7ce75696b16e8147f3553409df0753e983c265b51aa1ab0fea7e9dba18901b6957805d65bf2239cbc4173aa226cfd00855eca264e091af0bcd3c633225c741d'
+            'd9e949db52375b1dda7c75e7c45d50460bbf7d78bb8cb33ae3a71d4cb68b42883d079440e32bbf8ae955e2b938a91390fdb32a692613fd32e781c288289a688f'
             '52b14ef834769d2b4567e756a4485995acd2e3f5b989cbb53f9b113b42ff67b736bbcb284b95fe15c9efb846fd12320a26a131e4ce9af50b521114d274b472f1'
-            '2ff3827235189dd2217b1b7dee31925e9a75e053f85b08ea1c544d608d632bc4e5b5fbd90d3e154998662bf89137bc854afa257e10ba2726ee3eea8e8e6a0b4b'
+            'a40c381897d9ac99cb7ecaebb2b66011258b1feaf4e8ce3541002a2891b197e1cf31f9a1cdaada5fa67f16c203e3779e20843fb11bae4e809287569f9fcda814'
             'b1916a07e63a626f5e1b1ed3ec2793835c16b2367e215186a80615191d9a94eb0f3fb8728d7b3b1e4e973bd419d282733f84add6fae7c1d5334e4d7da6f2fa85')
