--- a/linux-5.6/uml/linux-usermode-rc/PKGBUILD
+++ b/linux-5.6/uml/linux-usermode-rc/PKGBUILD
@@ -5,12 +5,11 @@ pkgbase=linux-usermode-rc
 pkgname=('linux-usermode-rc' 'linux-usermode-rc-modules')
 _kernelname=-usermodelinux-rc
 _major=5.6
-_minor=0
+_minor=1
 _minorc=$((_minor+1))
 _rcver=rc1
 pkgver=${_major}.${_minorc}
-_stable=${_major}
-#_stable=${_major}.${_minor}
+_stable=${_major}.${_minor}
 _stablerc=${pkgver}-${_rcver}
 _srcname=linux-${_stable}
 pkgrel=1
@@ -29,9 +28,9 @@ source=("https://www.kernel.org/pub/linux/kernel/v5.x/linux-${_stable}.tar.xz"
         'config'
         '70-uml.hook')
 
-sha256sums=('e342b04a2aa63808ea0ef1baab28fc520bd031ef8cf93d9ee4a31d4058fcb622'
+sha256sums=('46d8fd446d0f6aa4b039d92d9a4992dfa1bf67e4274ec1b77616daf5174f1530'
             'SKIP'
-            'bf84b65efe48c73f5fd93c30f067bea049ba301d9b0216b39daeefbd4a2d46ef'
+            '34b077bee2947b75a514bf6dd4872b2c6d6324412905d0f56ba68cffc6e60d2e'
             'SKIP'
             'a706af35e9a41d71c5d45b48105748672611b2daecbbc7774a1b40a479e87688'
             '05ea4e00d1e99bf8140a21c94e3c42acf17b9debad9c6f5decbe1dd1fe04332c')
