--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.5
-_minor=16
-_lqx=lqx2
+_minor=18
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.5.16.lqx2.r0.gc3fd9c0017fe
+pkgver=5.5.18.lqx1.r0.ga285526a40e3
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -308,4 +308,4 @@ done
 
 sha512sums=('SKIP'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
-            '4ea6c142254c3cd7496d17453686d50d483f971a00523ee4b1d61b39d84b10ca3338f70bde01a1b01b4e8538d75fe81fb2dc6f791b857c0a77980a01a4ce76e3')
+            '41584264881c10dfcb1cab7c834339c6ba498ca1b3c9165b9e07a7690fba9e8ee2e50416153db1b0b8af6eb1ff1cd4e49dc5923652e111269ac65317397b344c')
