--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.6
-_minor=10
-_lqx=lqx2
+_minor=11
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.6.10.lqx2.r0.g74c6604a7be8
+pkgver=5.6.11.lqx1.r0.gabc7f744ace7
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
