Update gcc patch
Signed-off-by: Piotr Gorski <lucjan.lucjanov@gmail.com>

--- a/linux-5.7rc/linux-aufs-git/PKGBUILD
+++ b/linux-5.7rc/linux-aufs-git/PKGBUILD
@@ -51,7 +51,7 @@ _major=5.7
 _major_rc=5.7-rc
 _srcname=linux
 pkgver=5.7.rc6.r0.gb9bbe6ed63b2
-pkgrel=2
+pkgrel=3
 pkgdesc='Linux AUFS'
 arch=('x86_64')
 url="https://github.com/sfjro/aufs5-standalone"
@@ -64,12 +64,12 @@ _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major_rc}
 _aufs_path="aufs-patches"
 _aufs_ver="20200518"
 _aufs_patch="0001-aufs-${_aufs_ver}.patch"
-_gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
-_gcc_patch="enable_additional_cpu_optimizations_for_gcc_v10.1+_kernel_v5.7+.patch"
+_gcc_path="cpu-patches-v3-sep"
+_gcc_patch="0001-cpu-5.7-merge-graysky-s-patchset.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git"
         "${_lucjanpath}/${_aufs_path}/${_aufs_patch}"
-        "${_gcc_path}/${_gcc_patch}"
+        "${_lucjanpath}/${_gcc_path}/${_gcc_patch}"
         "${_lucjanpath}/arch-patches/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
         'sphinx-workaround.patch'
          # the main kernel config files
@@ -320,7 +320,7 @@ done
 
 sha512sums=('SKIP'
             '35bbae4c77e914a04fff960af738f56e2201a41abf12794410401c0aca89a8c188f49382ce98064245e1bb6f1dc14bd9dbc20ed3ed6d4b5918864ad6d0482262'
-            '509cddc74347c29d14a28156b491acd3ee9307eff0b19eddb9d38503871464fb26ee2406490092d9d5b53a88cf1f9788f10b63c67d25fa319f5a0d242875e3e1'
+            'b64e4d18572ba0b17f38ca1a1ae01b2f95690c6149a270a9c74adf8a891c480a50c21bb326508dc75bae07e2120472d18d7d33355d28cb6dc21c4e03b548e42e'
             '8eda2e01d9b198d67c789b0a8d685f020a9dc30744bcb3f99f88363bab93a695d06c0a4c7b72ab69dd878eadbaa274773b24780b5d403b1aa384f38ff822811b'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
             'b479b4e9af294bc348420e64a5a46d55f578eb288b230158b28878f811e15e106dab2a485dbe614a08a2ad777d96eb2daed89bafb8ae89842838b1aae7a9d50c')
