--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -46,9 +46,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.6
 _minor=13
-_lqx=lqx3
+_lqx=lqx4
 _srcname=zen-kernel
-pkgver=5.6.13.lqx3.r0.ge0fe232c2199
+pkgver=5.6.13.lqx4.r0.g1830dcb50fbc
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
